updated function home page