@@ -1,21 +1,23 @@
 package com.example.m13_project;
 
+import android.annotation.SuppressLint;
 import android.content.Intent;
 import android.os.Bundle;
 import android.widget.Button;
-import android.widget.SearchView;
 import androidx.appcompat.app.AppCompatActivity;
 import androidx.lifecycle.ViewModelProvider;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
-
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class SearchActivity extends AppCompatActivity {
 
     private ProductAdapter productAdapter;
-    private List<Product> allProducts;
+    private final List<Product> allProducts = new ArrayList<>();
 
+    @SuppressLint("NotifyDataSetChanged")
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
@@ -27,11 +29,12 @@ public class SearchActivity extends AppCompatActivity {
         Button navigationSearch = findViewById(R.id.navigation_cart);
         Button navigationFavorite = findViewById(R.id.navigation_favorite);
         Button navigationSettings = findViewById(R.id.navigation_settings);
+        Button buttonLogout = findViewById(R.id.buttonLogout);
 
         // Initialize RecyclerView
         RecyclerView recyclerView = findViewById(R.id.recyclerViewProducts);
-        productAdapter = new ProductAdapter(this, product -> {
-            // Handle product click here (if necessary)
+        productAdapter = new ProductAdapter(this, allProducts, product -> {
+            // Handle product click
         });
         recyclerView.setLayoutManager(new LinearLayoutManager(this));
         recyclerView.setAdapter(productAdapter);
@@ -39,23 +42,10 @@ public class SearchActivity extends AppCompatActivity {
         // Fetch all products using ViewModel (or API call)
         ProductViewModel productViewModel = new ViewModelProvider(this).get(ProductViewModel.class);
         productViewModel.getAllProducts().observe(this, products -> {
-            allProducts = products;
-            productAdapter.submitList(allProducts); // Display all products initially
-        });
-
-        // Set up SearchView listener
-        SearchView searchView = findViewById(R.id.searchView);
-        searchView.setOnQueryTextListener(new SearchView.OnQueryTextListener() {
-            @Override
-            public boolean onQueryTextSubmit(String query) {
-                filterProducts(query);
-                return true;
-            }
-
-            @Override
-            public boolean onQueryTextChange(String newText) {
-                filterProducts(newText);
-                return true;
+            if (products != null) {
+                allProducts.clear();
+                allProducts.addAll(products);
+                productAdapter.notifyDataSetChanged();
             }
         });
 
@@ -67,7 +57,6 @@ public class SearchActivity extends AppCompatActivity {
         });
 
         navigationSearch.setOnClickListener(v -> {
-            // No action needed, already in SearchActivity
         });
 
         navigationFavorite.setOnClickListener(v -> {
@@ -81,23 +70,17 @@ public class SearchActivity extends AppCompatActivity {
             startActivity(intent);
             finish();
         });
-    }
 
-    private void filterProducts(String query) {
-        if (allProducts != null && !query.isEmpty()) {
-            // Filter products based on the search query
-            List<Product> filteredProducts = filterList(allProducts, query);
-            productAdapter.submitList(filteredProducts);
-        } else {
-            // Show all products if query is empty
-            productAdapter.submitList(allProducts);
-        }
+        buttonLogout.setOnClickListener(v -> {
+            Intent intent = new Intent(SearchActivity.this, MainActivity.class);
+            startActivity(intent);
+            finish();
+        });
     }
 
     private List<Product> filterList(List<Product> products, String query) {
-        // Filter the list of products based on the query
         return products.stream()
-                .filter(product -> product.getName().toLowerCase().contains(query.toLowerCase()))
-                .toList();
+                .filter(product -> product.getDescription().toLowerCase().contains(query.toLowerCase()))
+                .collect(Collectors.toList());
     }
 }
